CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 6.5 REQUIRED)

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

FILE(STRINGS lib/THCULENN/THCULENN.h THCULENN_headers NEWLINE_CONSUME)
FILE(WRITE THCULENN_h.lua "return [[")
FILE(APPEND THCULENN_h.lua ${THCULENN_headers})
FILE(APPEND THCULENN_h.lua "]]")

FILE(STRINGS lib/THCULENN/generic/THCULENN.h THCULENN_generic_headers NEWLINE_CONSUME)
FILE(WRITE THCULENN_generic_h.lua "return [[")
FILE(APPEND THCULENN_generic_h.lua ${THCULENN_generic_headers})
FILE(APPEND THCULENN_generic_h.lua "]]")

FILE(GLOB luasrc *.lua)

ADD_SUBDIRECTORY(lib)

INSTALL(
  FILES
  ${luasrc}
  DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/culenn")
